fix overflow and test webkit

--- a/style.css
+++ b/style.css
@@ -652,6 +652,7 @@ background: linear-gradient(90deg, rgba(16,16,17,0.7063200280112045) 95%, rgba(2
   bottom: 0px;
   padding: 15px;
   backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
 }
@@ -660,7 +661,7 @@ background: linear-gradient(90deg, rgba(16,16,17,0.7063200280112045) 95%, rgba(2
   height: 280px;
   background: linear-gradient(90deg, #141A1F 5%, #17334A 100%);
   border-radius: 10px;
- 
+  overflow: hidden;
   position: relative;
 }
 .project-item-images{
